--- a/index.html
+++ b/index.html
@@ -18,12 +18,12 @@
 		<p class="mdui-shadow-3">月亮影视发布页，收藏我回家不迷路！</p>
 		<ul class="speedlist">
 			<li>
-				<a href="https://jxjson.cf/?url=" target="_blank" class="mdui-shadow-3"><strong>巴拉巴拉TV</strong></a>
+				<a href="https://myqcloud.cf/" target="_blank" class="mdui-shadow-3"><strong>月亮影视网</strong></a>
 
 				<i class="ms1">线路延迟：<i id="lineMs0">loading</i></i>
 			</li>
 			<li>
-				<a href="https://jxjson.cf/?url=" target="_blank" class="mdui-shadow-3"><strong>巴拉巴拉TV</strong></a>
+				<a href="https://jxjson.cf/123123123/?url=" target="_blank" class="mdui-shadow-3"><strong>免费播放器</strong></a>
 
 				<i class="ms1">线路延迟：<i id="lineMs1">loading</i></i>
 			</li>
