--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<i class="ms1">线路延迟：<i id="lineMs1">loading</i></i>
 			</li>
 			<li>
-				<a href="https://jxjson.cf/?url=" target="_blank" class="mdui-shadow-3"><strong>巴拉巴拉TV</strong></a>
+				<a href="http://ejhcmfld.hk3.20212021.ml.cdn.cloudflare.net/" target="_blank" class="mdui-shadow-3"><strong>流浪小店</strong></a>
 
 				<i class="ms1">线路延迟：<i id="lineMs2">loading</i></i>
 			</li>
