--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		</ul>
 	</div>
 	<div class="footer mdui-shadow-3">
-		<b>© 2023 Powered wawo. All Rights Reserved</b>
+		<b>© 2023 Powered Srray. All Rights Reserved</b>
 	</div>
 	
 	
